istio-ingress/ingress-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-keycloak
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: keycloak-tls
      hosts:
        - "app-keycloak.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-vs
spec:
  hosts:
    - "app-keycloak.com"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: keycloak-service
            port:
              number: 88
